[package]
name = "plexo-resources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.75.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
schemars = "0.8.11"
serde = "1.0.145"
serde_json = "1.0.85"
serde_yaml = "0.9.13"
kube-derive = "0.75.0"

[dev-dependencies]
rustfmt = "0.10.0"
